hphp/hack/test/typecheck/typeconsts/super_constraints/where_overrides_monomorphic.php.exp
ERROR: File "where_overrides_monomorphic.php", line 14, characters 46-47:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
